removed static import from OnboardingServiceTest